# zenail

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3f6b9d7f0c21_branch_timezones_and_booking_refs.py  8d849521862b_init_schema.py  b2d9f9c4a7a1_booking_enhancements.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py  sqlmodel.py
backend/app/models/: __init__.py  appointment.py  appointment_procedure.py  branch.py  branch_non_working_day.py  enums.py  master_procedure.py  procedure.py  reschedule_request.py  staff.py
backend/app/routers/: admin.py  auth.py  manager.py  master.py  public.py
backend/app/schemas/: admin.py  auth.py  manager.py  master.py  public.py
backend/app/scripts/: seed.py
backend/app/services/: appointment_out.py  booking.py  scheduling.py
backend/tests/: conftest.py  test_public_booking.py
docs/screenshots/: README.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  env.ts  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Button.tsx  Card.tsx  Input.tsx  Page.tsx
frontend/src/i18n/: messages.ts
frontend/src/layouts/: GuestLayout.tsx  StaffLayout.tsx
frontend/src/state/: auth.tsx  authContext.ts  booking.ts  i18n.tsx  i18nContext.ts  useT.ts  (+1 more)
scripts/: deploy-from-github.sh  deploy_server.py
(+20 files in other folders)
